# init-once

./: LICENSE  README.md  README.zh-CN.md  init_once.py  pyproject.toml  test.py
.github/workflows/: build-and-test.yml  python-package.yml
src/init_once/: __init__.py  __init__.pyi  _init_once_3_12.py  _init_once_3_8.py  init_once.py  init_once_3_12.py
tests/: basic_function_test.py  init_once_test.py  thread_safe_test.py
